Archive2/dc/74ccf59780f019/output
main.cpp: In function 'int main()':
main.cpp:7:26: error: 'a' was not declared in this scope
     std::vector<char> v({a,b,c});
                          ^
main.cpp:7:28: error: 'b' was not declared in this scope
     std::vector<char> v({a,b,c});
                            ^
main.cpp:7:30: error: 'c' was not declared in this scope
     std::vector<char> v({a,b,c});
                              ^
main.cpp:7:32: error: no matching function for call to 'std::vector<char>::vector(<brace-enclosed initializer list>)'
     std::vector<char> v({a,b,c});
                                ^
main.cpp:7:32: note: candidates are:
In file included from /usr/include/c++/4.8/vector:64:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_vector.h:392:9: note: template<class _InputIterator, class> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&)
         vector(_InputIterator __first, _InputIterator __last,
         ^
/usr/include/c++/4.8/bits/stl_vector.h:392:9: note:   template argument deduction/substitution failed:
main.cpp:7:32: note:   candidate expects 3 arguments, 1 provided
     std::vector<char> v({a,b,c});
                                ^
In file included from /usr/include/c++/4.8/vector:64:0,
                 from main.cpp:1:
/usr/include/c++/4.8/bits/stl_vector.h:364:7: note: std::vector<_Tp, _Alloc>::vector(std::initializer_list<_Tp>, const allocator_type&) [with _Tp = char; _Alloc = std::allocator<char>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<char>]
       vector(initializer_list<value_type> __l,
       ^
/usr/include/c++/4.8/bits/stl_vector.h:364:7: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'std::initializer_list<char>'
/usr/include/c++/4.8/bits/stl_vector.h:340:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&, const allocator_type&) [with _Tp = char; _Alloc = std::allocator<char>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<char>]
       vector(vector&& __rv, const allocator_type& __m)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:340:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/bits/stl_vector.h:331:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&, const allocator_type&) [with _Tp = char; _Alloc = std::allocator<char>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<char>]
       vector(const vector& __x, const allocator_type& __a)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:331:7: note:   candidate expects 2 arguments, 1 provided
/usr/include/c++/4.8/bits/stl_vector.h:327:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>&&) [with _Tp = char; _Alloc = std::allocator<char>]
       vector(vector&& __x) noexcept
       ^
/usr/include/c++/4.8/bits/stl_vector.h:327:7: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'std::vector<char>&&'
/usr/include/c++/4.8/bits/stl_vector.h:310:7: note: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = char; _Alloc = std::allocator<char>]
       vector(const vector& __x)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:310:7: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'const std::vector<char>&'
/usr/include/c++/4.8/bits/stl_vector.h:281:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = char; _Alloc = std::allocator<char>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = char; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<char>]
       vector(size_type __n, const value_type& __value,
       ^
/usr/include/c++/4.8/bits/stl_vector.h:281:7: note:   candidate expects 3 arguments, 1 provided
/usr/include/c++/4.8/bits/stl_vector.h:269:7: note: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const allocator_type&) [with _Tp = char; _Alloc = std::allocator<char>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<char>]
       vector(size_type __n, const allocator_type& __a = allocator_type())
       ^
/usr/include/c++/4.8/bits/stl_vector.h:269:7: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'std::vector<char>::size_type {aka long unsigned int}'
/usr/include/c++/4.8/bits/stl_vector.h:256:7: note: std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = char; _Alloc = std::allocator<char>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<char>]
       vector(const allocator_type& __a)
       ^
/usr/include/c++/4.8/bits/stl_vector.h:256:7: note:   no known conversion for argument 1 from '<brace-enclosed initializer list>' to 'const allocator_type& {aka const std::allocator<char>&}'
/usr/include/c++/4.8/bits/stl_vector.h:248:7: note: std::vector<_Tp, _Alloc>::vector() [with _Tp = char; _Alloc = std::allocator<char>]
       vector()
       ^
/usr/include/c++/4.8/bits/stl_vector.h:248:7: note:   candidate expects 0 arguments, 1 provided
